{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 11,
  "lineage": "402f3107-1f49-19e5-8fab-1f0178dec344",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268152168639:route-table/rtb-0745fd8fb3123574c",
            "default_route_table_id": "rtb-0745fd8fb3123574c",
            "id": "rtb-0745fd8fb3123574c",
            "owner_id": "268152168639",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06fc1ec975604a9c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "W20-Internet-Gateway"
            },
            "tags_all": {
              "Name": "W20-Internet-Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-056a0b4cb0432bb3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfcb1ef8550277af",
            "arn": "arn:aws:ec2:us-east-1:268152168639:instance/i-09d8bc45bec7d7faf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d8bc45bec7d7faf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cb854ecff30cf8a",
            "private_dns": "ip-10-0-0-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.91",
            "public_ip": "44.200.229.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d21a2ec44b98b780",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-018d03d38e6c8ab4c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08156d14cebe158a6",
            "tags": {
              "Name": "Jenkins_Server"
            },
            "tags_all": {
              "Name": "Jenkins_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-018d03d38e6c8ab4c"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_security_group",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268152168639:internet-gateway/igw-06fc1ec975604a9c2",
            "id": "igw-06fc1ec975604a9c2",
            "owner_id": "268152168639",
            "tags": {
              "Name": "W20-Internet-Gateway"
            },
            "tags_all": {
              "Name": "W20-Internet-Gateway"
            },
            "vpc_id": "vpc-056a0b4cb0432bb3a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268152168639:security-group/sg-018d03d38e6c8ab4c",
            "description": "Apply to Jenkins EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018d03d38e6c8ab4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from MY Public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access to Jenkis from My IP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Week 20 Security Group",
            "name_prefix": "",
            "owner_id": "268152168639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins_Security_Group"
            },
            "tags_all": {
              "Name": "Jenkins_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-056a0b4cb0432bb3a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268152168639:subnet/subnet-08156d14cebe158a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08156d14cebe158a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "268152168639",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "W20-Subnet"
            },
            "tags_all": {
              "Name": "W20-Subnet"
            },
            "vpc_id": "vpc-056a0b4cb0432bb3a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:268152168639:vpc/vpc-056a0b4cb0432bb3a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b9205868a791e3a",
            "default_route_table_id": "rtb-0745fd8fb3123574c",
            "default_security_group_id": "sg-0414fbcf1db26a712",
            "dhcp_options_id": "dopt-0ae712848bb0138ed",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056a0b4cb0432bb3a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0745fd8fb3123574c",
            "owner_id": "268152168639",
            "tags": {
              "Name": "W20-VPC"
            },
            "tags_all": {
              "Name": "W20-VPC"
            }
          }
        }
      ]
    }
  ]
}